--- a/static/css/index.css
+++ b/static/css/index.css
@@ -123,6 +123,16 @@ body {
   font-size: 0;
 }
 
+.results-carousel .item-small {
+  margin: 5px;
+  overflow: hidden;
+  border: 1px solid #bbb;
+  border-radius: 10px;
+  padding: 0;
+  font-size: 0;
+  width: 30%;
+}
+
 .results-carousel video {
   margin: 0;
 }
